--- a/frontend/src/app/shop/paquete-turistico-la-cumbrecita/paquete-turistico-la-cumbrecita.component.html
+++ b/frontend/src/app/shop/paquete-turistico-la-cumbrecita/paquete-turistico-la-cumbrecita.component.html
@@ -63,7 +63,8 @@
             <label for="exampleFormControlInput1" class="form-label"></label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="2 Adultos">
         <br>
-            <button type="submit" class="btn btn-primary">Comprar</button>
+          <button type="submit" class="btn btn-primary boton">Comprar</button>
+          <button type="submit" class="btn btn-primary" [routerLink]="['/paquete-turisticos']">Volver</button>
         <br>
         <br>
         <br>
