--- a/frontend/src/app/shop/paquete-turistico-traslasierra/paquete-turistico-traslasierra.component.html
+++ b/frontend/src/app/shop/paquete-turistico-traslasierra/paquete-turistico-traslasierra.component.html
@@ -1,3 +1,10 @@
+<header class="header">
+  <div id="portada">
+
+    <h1>Paquetes turisticos</h1>
+  </div>
+  
+</header>
 
 <section class="primeraetapa">
 
@@ -49,7 +56,8 @@
             <label for="exampleFormControlInput1" class="form-label"></label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="2 Adultos">
         <br>
-            <button type="submit" class="btn btn-primary">Comprar</button>
+          <button type="submit" class="btn btn-primary boton">Comprar</button>
+          <button type="submit" class="btn btn-primary" [routerLink]="['/paquete-turisticos']">Volver</button>
         <br>
         <br>
         <br>
