--- a/frontend/src/app/shop/paquete-turistico-cba/paquete-turistico-cba.component.html
+++ b/frontend/src/app/shop/paquete-turistico-cba/paquete-turistico-cba.component.html
@@ -65,7 +65,7 @@
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="2 Adultos">
         <br>
         <button type="submit" class="btn btn-primary boton">Comprar</button>
-        <button type="submit" class="btn btn-primary" [routerLink]="['/paquete-turisticos']">Volver</
+        <button type="submit" class="btn btn-primary" [routerLink]="['/paquete-turisticos']">Volver</button>
         <br>
         <br>
         <br>
