--- a/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
+++ b/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
@@ -20,29 +20,36 @@
 </section>
 -->
 
-<section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-cpaz']">
+<section class="oferta"> 
     <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/DSC07946.jpg" alt="Catedral de Córdoba">
     </div>
-    <div class="nombrepaquete" *ngIf="products">
-        <ng-container *ngFor="let producto of products">
+    <div class="nombrepaquete" *ngIf="productos">
+        <ng-container *ngFor="let producto of productos">
             <div *ngIf="producto.idproducto == 6">        
     <h2> {{ producto.nombreproducto }}</h2>
     <p class="cuerpo">{{ producto.descripcion }}</p>
     <p> fecha: {{ producto.fecha }}</p>
     <p>Idioma: Ingles, Español</p>
     <p>Modalidad: Cancelacion Gratuita</p>
+    <div class="ubicacion">
+        <button type="submit" class="btn btn-primary boton" (click)="agregarAlCarrito(producto)">Agregar al carrito</button>
+        <button type="submit" class="btn btn-primary boton1" [routerLink]="['/paquete-turistico-la-cumbrecita']">Descripción</button>
+    </div>
+
+    
+   
         </div>       
         </ng-container>
     </div>
-    <div class="precio" *ngIf="products">
-        <ng-container *ngFor="let producto of products">
+    <div class="precio" *ngIf="productos">
+        <ng-container *ngFor="let producto of productos">
         <div *ngIf="producto.idproducto == 6">   
         <p class="negrita">Desde</p>
         <p> $ {{ producto.precio }}</p>
             </div>       
             </ng-container>
     </div>   
-    </a>
+    
 </section>
 
 
@@ -51,8 +58,8 @@
 <section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-la-cumbrecita']">
     <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/la cumbrecita.jpg" alt="Catedral de Córdoba">
     </div>
-    <div class="nombrepaquete" *ngIf="products">
-        <ng-container *ngFor="let producto of products">
+    <div class="nombrepaquete" *ngIf="productos">
+        <ng-container *ngFor="let producto of productos">
             <div *ngIf="producto.idproducto == 7">        
     <h2> {{ producto.nombreproducto }}</h2>
     <p class="cuerpo">{{ producto.descripcion }}</p>
@@ -62,8 +69,8 @@
         </div>       
         </ng-container>
     </div>
-    <div class="precio" *ngIf="products">
-        <ng-container *ngFor="let producto of products">
+    <div class="precio" *ngIf="productos">
+        <ng-container *ngFor="let producto of productos">
         <div *ngIf="producto.idproducto == 7">   
         <p class="negrita">Desde</p>
         <p> $ {{ producto.precio }}</p>
@@ -78,8 +85,8 @@
 <section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-cba']">
 <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/catedral1.jpg" alt="Catedral de Córdoba">
 </div>
-<div class="nombrepaquete" *ngIf="products">
-    <ng-container *ngFor="let producto of products">
+<div class="nombrepaquete" *ngIf="productos">
+    <ng-container *ngFor="let producto of productos">
         <div *ngIf="producto.idproducto == 8">        
 <h2> {{ producto.nombreproducto }}</h2>
 <p class="cuerpo">{{ producto.descripcion }}</p>
@@ -89,8 +96,8 @@
     </div>       
     </ng-container>
 </div>
-<div class="precio" *ngIf="products">
-    <ng-container *ngFor="let producto of products">
+<div class="precio" *ngIf="productos">
+    <ng-container *ngFor="let producto of productos">
     <div *ngIf="producto.idproducto == 8">   
     <p class="negrita">Desde</p>
     <p> $ {{ producto.precio }}</p>
@@ -105,8 +112,8 @@
 <section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-traslasierra']">
 <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/Nacimiento del rio Mina Clavero.jpg" alt="Catedral de Córdoba">
 </div>
-<div class="nombrepaquete" *ngIf="products">
-    <ng-container *ngFor="let producto of products">
+<div class="nombrepaquete" *ngIf="productos">
+    <ng-container *ngFor="let producto of productos">
         <div *ngIf="producto.idproducto == 9">        
 <h2> {{ producto.nombreproducto }}</h2>
 <p class="cuerpo">{{ producto.descripcion }}</p>
@@ -116,8 +123,8 @@
     </div>       
     </ng-container>
 </div>
-<div class="precio" *ngIf="products">
-    <ng-container *ngFor="let producto of products">
+<div class="precio" *ngIf="productos">
+    <ng-container *ngFor="let producto of productos">
     <div *ngIf="producto.idproducto == 9">   
     <p class="negrita">Desde</p>
     <p> $ {{ producto.precio }}</p>
