--- a/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
+++ b/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
@@ -1,115 +1,141 @@
+<!--
+
 <section class="oferta"> 
     
     <div class="api">
     <h2 class="title"> Api de prueba</h2>
-    <ul>
-        <li class="formato" *ngFor="let item of data">
-            {{ item.name }}
+   
 
-        </li>
-    </ul>
+    <div *ngFor="let product of products">
+         Mostrar los datos aquí -->
+     <!--   <p>{{ product.nombreproducto }}</p>
+        <img class="anchofoto" src="./assets/img/DSC07946.jpg" alt="Catedral de Córdoba">
+        <p>{{ product.fecha }}</p>
+      </div>
 
-    <ul>
-        <li class="formato" *ngFor="let item of data2">
-            {{ item.name }}
-
-        </li>
-    </ul>
-
-    <ul>
-        <li class="formato" *ngFor="let item of dataSofia">
-            {{ item.name }}
-
-        </li>
-    </ul>
+   
 
     </div>   
     
 </section>
+-->
 
-
-<!--<div>
-    <h2>Api Demo</h2>
-    <ul>
-        <li *ngFor="let item of data">
-            {{ item.name }}
-
-        </li>
-    </ul>
-
-</div>-->
-
-<section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-cpaz']">
-    <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/DSC07946.jpg" alt="Catedral de Córdoba">
+<section class="oferta"> 
+    <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/DSC07946.jpg" alt="Carlos_Paz">
     </div>
-    <div class="nombrepaquete">
-    <h2> Excurcion a Villa Carlos Paz.</h2>
-    <p class="cuerpo">Viaje a Villa Carlos Paz desde Córdoba. Tiempo libre en el complejo turístico y comercial Montaña Mágica. Cultura jesuita</p>
-    <p> Duracion: 4 Horas</p>
+    <div class="nombrepaquete" *ngIf="productos">
+        <ng-container *ngFor="let producto of productos">
+            <div *ngIf="producto.idproducto == 6">        
+    <h2> {{ producto.nombreproducto }}</h2>
+    <p class="cuerpo">{{ producto.descripcion }}</p>
+    <p> fecha: {{ producto.fecha }}</p>
     <p>Idioma: Ingles, Español</p>
     <p>Modalidad: Cancelacion Gratuita</p>
+    
+
+    <button type="submit" class="btn btn-primary boton"(click)="agregarAlCarrito(producto)">Agregar al carrito</button>
+    <button type="submit" class="btn btn-primary boton1" [routerLink]="['/paquete-turistico-cpaz']">Descripción</button>
+   
+        </div>       
+        </ng-container>
     </div>
-    <div class="precio">
+    <div class="precio" *ngIf="productos">
+        <ng-container *ngFor="let producto of productos">
+        <div *ngIf="producto.idproducto == 6">   
         <p class="negrita">Desde</p>
-        <p>$ 12999</p>
+        <p> $ {{ producto.precio }}</p>
+            </div>       
+            </ng-container>
     </div>   
-    </a>
+   
 </section>
 
 
-<!--PARTE NUEVA 1-->
+<!--src="./assets/img/la cumbrecita.jpg-->
 
-<section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-la-cumbrecita']">
-<div class="fotopaquete"> <img class="anchofoto" src="./assets/img/la cumbrecita.jpg" alt="Catedral de Córdoba">
-</div>
-<div class="nombrepaquete">
-<h2> La Cumbrecita y Villa Gral. Belgrano x 2 pax</h2>
-<p class="cuerpo">Aleje sus vacaciones de los caminos trillados en un tour privado a Villa General Belgrano y Cumbrecita. Después de un cómodo traslado desde su hotel de Córdoba o desde el aeropuerto, disfrute de un relajante viaje a Cumbrecita. Siga a su guía personal...</p>
-<p> Duracion: De 6 a 8 Horas</p>
-<p>Idioma: Ingles, Español</p>
-<p>Modalidad: Cancelacion Gratuita</p>
-</div>
-<div class="precio">
-<p class="negrita">Desde</p>
-<p>$ 25000</p>
-</div>  
-</a>
+<section class="oferta">>
+    <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/la cumbrecita.jpg" alt="la-cumbrecita">
+    </div>
+    <div class="nombrepaquete" *ngIf="productos">
+        <ng-container *ngFor="let producto of productos">
+            <div *ngIf="producto.idproducto == 7">        
+    <h2> {{ producto.nombreproducto }}</h2>
+    <p class="cuerpo">{{ producto.descripcion }}</p>
+    <p> fecha: {{ producto.fecha }}</p>
+    <p>Idioma: Ingles, Español</p>
+    <p>Modalidad: Cancelacion Gratuita</p>
+    <button type="submit" class="btn btn-primary boton"(click)="agregarAlCarrito(producto)">Agregar al carrito</button>
+    <button type="submit" class="btn btn-primary boton1" [routerLink]="['/paquete-turistico-la-cumbrecita']">Descripción</button>
+
+        </div>       
+        </ng-container>
+    </div>
+    <div class="precio" *ngIf="productos">
+        <ng-container *ngFor="let producto of productos">
+        <div *ngIf="producto.idproducto == 7">   
+        <p class="negrita">Desde</p>
+        <p> $ {{ producto.precio }}</p>
+            </div>       
+            </ng-container>
+    </div>   
+    
 </section>
 
-<!--PARTE NUEVA 2-->
+<!--catedral1.jpg-->
 
-<section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-cba']">
+<section class="oferta"> >
 <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/catedral1.jpg" alt="Catedral de Córdoba">
 </div>
-<div class="nombrepaquete">
-<h2> Córdoba CityTour FULLDAY x 2 pax</h2>
-<p class="cuerpo">Una experiencia completa para descubrir la ciudad de Córdoba en su totalidad. En los últimos años, se han agregado atracciones que no están incluidas en las ciudades tradicionales de medio día, por lo que creamos esta nueva opción, donde además de conocer la historia, ingresamos a los barrios más emblemáticos de la ciudad y sus nuevos parques y carreteras...</p>
-<p> Duracion: De 6 a 8 Horas</p>
+<div class="nombrepaquete" *ngIf="productos">
+    <ng-container *ngFor="let producto of productos">
+        <div *ngIf="producto.idproducto == 8">        
+<h2> {{ producto.nombreproducto }}</h2>
+<p class="cuerpo">{{ producto.descripcion }}</p>
+<p> fecha: {{ producto.fecha }}</p>
 <p>Idioma: Ingles, Español</p>
 <p>Modalidad: Cancelacion Gratuita</p>
+<button type="submit" class="btn btn-primary boton"(click)="agregarAlCarrito(producto)">Agregar al carrito</button>
+<button type="submit" class="btn btn-primary boton1" [routerLink]="['/paquete-turistico-cba']">Descripción</button>
+
+    </div>       
+    </ng-container>
 </div>
-<div class="precio">
-<p class="negrita">Desde</p>
-<p>$ 14999</p>
-</div>  
-</a>
+<div class="precio" *ngIf="productos">
+    <ng-container *ngFor="let producto of productos">
+    <div *ngIf="producto.idproducto == 8">   
+    <p class="negrita">Desde</p>
+    <p> $ {{ producto.precio }}</p>
+        </div>       
+        </ng-container>
+</div>   
+
 </section>
 
 <!--PARTE NUEVA 3-->
 
-<section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-traslasierra']">
-<div class="fotopaquete"> <img class="anchofoto" src="./assets/img/Nacimiento del rio Mina Clavero.jpg" alt="Catedral de Córdoba">
+<section class="oferta">
+<div class="fotopaquete"> <img class="anchofoto" src="./assets/img/Nacimiento del rio Mina Clavero.jpg" alt="traslasierra">
 </div>
-<div class="nombrepaquete">
-<h2> Excursión de día completo al Valle de Traslasierra desde Córdoba</h2>
-<p class="cuerpo">Escape de las rutas turísticas para explorar las tradicionales ciudades y los valles bañados de sol de Traslasierra en esta excursión de día completo desde Córdoba. Hágase una idea de la vida local mientras visita las ciudades de la provincia...</p>
-<p> Duracion: De 10 Horas</p>
+<div class="nombrepaquete" *ngIf="productos">
+    <ng-container *ngFor="let producto of productos">
+        <div *ngIf="producto.idproducto == 9">        
+<h2> {{ producto.nombreproducto }}</h2>
+<p class="cuerpo">{{ producto.descripcion }}</p>
+<p> fecha: {{ producto.fecha }}</p>
 <p>Idioma: Ingles, Español</p>
 <p>Modalidad: Cancelacion Gratuita</p>
+<button type="submit" class="btn btn-primary boton"(click)="agregarAlCarrito(producto)">Agregar al carrito</button>
+<button type="submit" class="btn btn-primary boton1" [routerLink]="['/paquete-turistico-traslasierra']">Descripción</button>
+    </div>       
+    </ng-container>
 </div>
-<div class="precio">
-<p class="negrita">Desde</p>
-<p>$ 23999</p>
-</div>  
-</a>
+<div class="precio" *ngIf="productos">
+    <ng-container *ngFor="let producto of productos">
+    <div *ngIf="producto.idproducto == 9">   
+    <p class="negrita">Desde</p>
+    <p> $ {{ producto.precio }}</p>
+        </div>       
+        </ng-container>
+</div>   
+
 </section>
